--- a/Index.html
+++ b/Index.html
@@ -23,5 +23,11 @@
     <blockquote>
         To be or not to be. That's the question.
     </blockquote>
+    <p>List of things</p>
+    <ol>
+        <li>Dance</li>
+        <li>Write</li>
+        <li>Program</li>
+    </ol>
 </body>
 </html>
