--- a/Index.html
+++ b/Index.html
@@ -29,5 +29,7 @@
         <li>Write</li>
         <li>Program</li>
     </ol>
+    <p>A tree </p>
+    <img src="img/Carballo.jpg" alt="A beautiful tree" height="500" width="500">
 </body>
 </html>
